[aliases]
test = pytest

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 0

[pylama]
format = pylint
skip = */migrations/*

[pylama:pycodestyle]
max_line_length = 80

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --junitxml=test-results.xml
    --cov=chaosplatform
    --cov-report term-missing:skip-covered 
    --cov-report xml
